objects/HC_obj_enfermedadesInfecciosas__c.object
<CustomObject>
    <fields>
        <fullName>HC_fld_casosActivos__c</fullName>
        <label>Casos Activos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_confirmados__c</fullName>
        <label>Confirmados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_fallecidos__c</fullName>
        <label>Fallecidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HC_fld_provincia__c</fullName>
        <label>Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_fld_recuperados__c</fullName>
        <label>Recuperados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_fld_regionIso__c</fullName>
        <label>Región - Iso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_fld_regionName__c</fullName>
        <label>Región Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Enfermedad Infecciosa</label>
    <nameField>
        <label>Erfenmedades Infecciosas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enfermedades Infecciosas</pluralLabel>
    <recordTypes>
        <fullName>COVID_19</fullName>
        <active>true</active>
        <description>COVID-19 Statistics</description>
        <label>COVID-19</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>